<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScriptView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_option_Pen">Pen</string>
    <string name="menu_option_Eraser">Eraser</string>
    <string name="menu_option_recog_gesture">Detect</string>
    <string name="title_activity_pdf_display_screen">PDFDisplay</string>
    <string name="title_activity_main_marking_screen">MainMarkingScreenActivity</string>
    <string name="action_undo">Undo</string>
    <string name="action_add_comment">Add Comment</string>
    <string name="action_free_write">Enter writing mode</string>
    <string name="action_flag_script">Flag Script</string>
    <string name="action_upload_script">Upload Script</string>
    <string name="title_activity_test_script_browser">TestScriptBrowserActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="action_prev">Previous</string>
    <string name="action_next">Next</string>
    <string name="title_activity_script_finalize_and_upload">ScriptFinalizeAndUploadActivity</string>
    <string name="instruction_enter_student_number">Please enter the student number:</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_name">New Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_test_per_question_layout">TestPerQuestionLayoutActivity</string>
    <string name="title_activity_per_question_marking">PerQuestionMarkingActivity</string>
    <string name="base_URL">http://people.cs.uct.ac.za/~vsoudien/Test</string>

</resources>
