<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.VictorZahraa.hybridmarker.MainMarkingScreenActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/action_undo"
       	android:title="@string/action_undo"
    	android:icon="@drawable/ic_action_undo" 
    	android:showAsAction="ifRoom"/>
    
    <item 
        android:id="@+id/action_add_comment"
       	android:title="@string/action_add_comment"
    	android:icon="@drawable/ic_action_edit" 
    	android:showAsAction="ifRoom"/>
    	
    <item 
        android:id="@+id/action_flag_script"
       	android:title="@string/action_flag_script"
    	android:icon="@drawable/ic_action_warning" 
    	android:showAsAction="ifRoom"/>

</menu>
