<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.VictorZahraa.hybridmarker.MainScreenActivity" >

     <item
        android:id="@+id/menu_option_Pen"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_option_Pen"/>
     
     <item
        android:id="@+id/menu_option_Eraser"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_option_Eraser"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/menu_option_recog_gesture"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_option_recog_gesture"/>
    <item android:id="@+id/menu_option_view_pdf" android:title="View PDF" android:orderInCategory="100"></item>

</menu>
